--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,4 @@
+/* Reset styles */
 h1,
 h2,
 h3,
@@ -29,6 +30,6 @@ button {
 
 img {
   display: block;
-  max-width: 100%;
+  min-width: 100%;
   height: auto;
 }
